# 32blit-music-player

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  assets.yml  buffered-file.cpp  buffered-file.hpp  control-icons.cpp  control-icons.hpp  cpconv_stub.c  file-browser.cpp  file-browser.hpp  fonts.hpp  metadata.yml  minimp3.h  mp3-stream.cpp  mp3-stream.hpp  music-player.cpp  music-stream.hpp  music-tags.hpp  stb_vorbis.c  stdio-wrap.hpp  vgm-stream.cpp  vgm-stream.hpp  vorbis-stream.cpp  vorbis-stream.hpp
.github/workflows/: build.yml
